--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
         <script src="script.js"></script>
     </head>
     <body>
-        <h1>Substituidor de Palavras</h1>
-        <textarea id="texto" cols="30" rows="10"></textarea>
-        <input type="text" id="busca">
-        <input type="text" id="substitui">
-        <button onclick="substituiTexto()">Substituir</button>
-        <div class="resultado"></div>
+        <div class="area">
+            <h1>Substituidor de Palavras</h1>
+            <textarea id="texto" cols="30" rows="10" placeholder="Digite aqui sua frase"></textarea>
+            <input type="text" id="busca" placeholder="Digite a palavra de busca">
+            <input type="text" id="substitui" placeholder="Digite a palavra substituta">
+            <button onclick="substituiTexto()">Substituir</button>
+            <div class="resultado"></div>
+        </div>
     </body>
 </html>
